--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@keyframes slideLoop {
+    0% {
+      transform: translateX(100%);
+      opacity: 0;
+    }
+    50% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+    100% {
+      transform: translateX(-100%);
+      opacity: 0;
+    }
+  }
+  
+  .animate-slide-loop {
+    animation: slideLoop 5s linear infinite;
+    animation-play-state: running; /* Animasi default berjalan */
+  }
+  
+  .animate-slide-loop:hover {
+    animation-play-state: paused; /* Animasi berhenti saat hover */
+  }
+  
